--- a/integration/spark2/pom.xml
+++ b/integration/spark2/pom.xml
@@ -162,6 +162,14 @@
   </build>
   <profiles>
     <profile>
+      <id>build-all</id>
+      <properties>
+        <spark.version>2.1.0</spark.version>
+        <scala.binary.version>2.11</scala.binary.version>
+        <scala.version>2.11.8</scala.version>
+      </properties>
+    </profile>
+    <profile>
       <id>sdvtest</id>
       <properties>
         <maven.test.skip>true</maven.test.skip>
