Skipping jacoco plugin from build-all profile to avoid failure

--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,17 @@
         <module>integration/presto</module>
         <module>examples/flink</module>
       </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>hadoop-2.2.0</id>
