--- a/integration/spark-common-test/pom.xml
+++ b/integration/spark-common-test/pom.xml
@@ -94,7 +94,11 @@
       <exclusions>
         <exclusion>
           <groupId>org.apache.spark</groupId>
-          <artifactId>spark-hive-thriftserver_2.10</artifactId>
+          <artifactId>spark-hive-thriftserver_2.11</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-sql_2.11</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -344,11 +348,11 @@
           <exclusions>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-hive-thriftserver_2.10</artifactId>
+              <artifactId>spark-hive-thriftserver_2.11</artifactId>
             </exclusion>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-repl_2.10</artifactId>
+              <artifactId>spark-repl_2.11</artifactId>
             </exclusion>
           </exclusions>
         </dependency>
@@ -365,11 +369,11 @@
           <exclusions>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-hive-thriftserver_2.10</artifactId>
+              <artifactId>spark-hive-thriftserver_2.11</artifactId>
             </exclusion>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-repl_2.10</artifactId>
+              <artifactId>spark-repl_2.11</artifactId>
             </exclusion>
           </exclusions>
         </dependency>
@@ -389,11 +393,11 @@
           <exclusions>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-hive-thriftserver_2.10</artifactId>
+              <artifactId>spark-hive-thriftserver_2.11</artifactId>
             </exclusion>
             <exclusion>
               <groupId>org.apache.spark</groupId>
-              <artifactId>spark-repl_2.10</artifactId>
+              <artifactId>spark-repl_2.11</artifactId>
             </exclusion>
           </exclusions>
         </dependency>
