--- a/integration/presto/pom.xml
+++ b/integration/presto/pom.xml
@@ -451,7 +451,7 @@
   </dependencies>
 
   <build>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
     <resources>
       <resource>
         <directory>src/resources</directory>
