Min Max Example

--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,7 @@
         <module>examples/spark</module>
         <module>integration/spark2</module>
         <module>examples/spark2</module>
+        <module>datamap/examples</module>
         <module>integration/hive</module>
         <module>integration/presto</module>
         <module>examples/flink</module>
@@ -540,6 +541,7 @@
         <module>integration/hive</module>
         <module>integration/presto</module>
         <module>examples/spark2</module>
+        <module>datamap/examples</module>
       </modules>
       <build>
         <plugins>
