fix code style to pass lint check.

--- a/examples/spark2/pom.xml
+++ b/examples/spark2/pom.xml
@@ -73,7 +73,7 @@
   </dependencies>
 
   <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
+    <sourceDirectory>src/main/scala, src/main/java</sourceDirectory>
     <resources>
       <resource>
         <directory>.</directory>
