--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <snappy.version>1.1.2.6</snappy.version>
-    <hadoop.version>2.2.0</hadoop.version>
+    <hadoop.version>2.7.2</hadoop.version>
     <hadoop.deps.scope>compile</hadoop.deps.scope>
     <spark.deps.scope>compile</spark.deps.scope>
     <scala.deps.scope>compile</scala.deps.scope>
@@ -438,6 +438,7 @@
         <module>integration/hive</module>
         <module>integration/presto</module>
         <module>examples/flink</module>
+        <module>streaming</module>
       </modules>
       <build>
         <plugins>
@@ -450,13 +451,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>hadoop-2.2.0</id>
-      <!-- default -->
-      <properties>
-        <hadoop.version>2.2.0</hadoop.version>
-      </properties>
     </profile>
     <profile>
       <id>hadoop-2.7.2</id>
@@ -478,6 +472,7 @@
         <module>integration/spark2</module>
         <module>integration/hive</module>
         <module>integration/presto</module>
+        <module>streaming</module>
         <module>examples/spark2</module>
       </modules>
       <build>
