[CARBONDATA-1552][Spark-2.2 Integration] Spark-2.2 Carbon Integration
Spark-2.2 Carbon Integration.
Phase 1 - Compilation ready for Spark-2.2.
Phase 2 - Merge the changes of Spark-2.2 and Spark-2.1 to Spark-2 folder.

This closes #1469

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -140,6 +140,16 @@
       </dependencies>
     </profile>
     <profile>
+      <id>spark-2.2</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.carbondata</groupId>
+          <artifactId>carbondata-spark2</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>include-all</id>
       <properties>
         <hadoop.deps.scope>compile</hadoop.deps.scope>
