--- a/datamap/lucene/pom.xml
+++ b/datamap/lucene/pom.xml
@@ -11,7 +11,9 @@
         <lucene.version>6.3.0</lucene.version>
         <solr.version>6.3.0</solr.version>
         <carbondata.version>1.3.0-SNAPSHOT</carbondata.version>
-        <hadoop.version>2.7.2</hadoop.version>    
+        <hadoop.version>2.7.2</hadoop.version>
+        <scala.binary.version>2.11</scala.binary.version>
+        <scala.version>2.11.8</scala.version>
     </properties>
     <dependencies>
         <dependency>
@@ -163,36 +165,40 @@
                 </exclusion>
             </exclusions-->
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
     <build>
     <plugins>
-    <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
-        <executions>
-              <execution>
-                  <id>compile</id>
-                  <goals>
-                        <goal>compile</goal>
-                  </goals>
-                  <phase>compile</phase>
-              </execution>
-              <execution>
-                  <id>testCompile</id>
-                  <goals>
-                        <goal>testCompile</goal>
-                  </goals>
-                  <phase>test</phase>
-              </execution>
-              <execution>
-                  <phase>process-resources</phase>
-                  <goals>
-                        <goal>compile</goal>
-                  </goals>
-              </execution>
-        </executions>
-     </plugin>
+        <plugin>
+            <groupId>org.scala-tools</groupId>
+            <artifactId>maven-scala-plugin</artifactId>
+            <version>2.15.2</version>
+            <executions>
+                  <execution>
+                      <goals>
+                          <goal>add-source</goal>
+                          <goal>compile</goal>
+                          <goal>testCompile</goal>
+                      </goals>
+                  </execution>
+            </executions>
+         </plugin>
      </plugins>
     </build>
 </project>
