Removed S3CarbonFile and added append functionality

--- a/examples/spark2/pom.xml
+++ b/examples/spark2/pom.xml
@@ -56,10 +56,10 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-repl_${scala.binary.version}</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>22.0</version>
+   <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.2</version>
     </dependency>
   </dependencies>
 
