--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
     <spark.master.url>local[2]</spark.master.url>
     <hdfs.url>local</hdfs.url>
     <suite.name>org.apache.carbondata.cluster.sdv.suite.SDVSuites</suite.name>
+    <script.exetension>.sh</script.exetension>
   </properties>
 
   <repositories>
@@ -602,6 +603,12 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <properties>
+        <script.exetension>.bat</script.exetension>
+      </properties>
     </profile>
   </profiles>
 
