[CARBONDATA-1993] Carbon properties default values fix and corresponding and template, document correction.

--- a/conf/carbon.properties.template
+++ b/conf/carbon.properties.template
@@ -20,7 +20,7 @@
 #Mandatory. Carbon Store path
 carbon.storelocation=hdfs://hacluster/Opt/CarbonStore
 #Base directory for Data files
-carbon.ddl.base.hdfs.url=hdfs://hacluster/opt/data
+#carbon.ddl.base.hdfs.url=hdfs://hacluster/opt/data
 #Path where the bad records are stored
 carbon.badRecords.location=/opt/Carbon/Spark/badrecords
 
@@ -29,11 +29,11 @@ carbon.badRecords.location=/opt/Carbon/Spark/badrecords
 #File read buffer size used during sorting(in MB) :MIN=1:MAX=100
 carbon.sort.file.buffer.size=20
 #Rowset size exchanged between data load graph steps :MIN=500:MAX=1000000
-carbon.graph.rowset.size=100000
+carbon.graph.rowset.size=500
 #Number of cores to be used while data loading
-carbon.number.of.cores.while.loading=6
+carbon.number.of.cores.while.loading=2
 #Record count to sort and write to temp intermediate files
-carbon.sort.size=500000
+carbon.sort.size=100000
 #Algorithm for hashmap for hashkey calculation
 carbon.enableXXHash=true
 #Number of cores to be used for block sort while dataloading
